--- a/Views/Role/MenuManager.cshtml
+++ b/Views/Role/MenuManager.cshtml
@@ -37,7 +37,7 @@
                 <input type="button" class="btn btn-primary" value="查询" v-on:click="search" />
                 <input type="button" class="btn btn-primary" value="添加" v-on:click="showAdd" />
             </div>
-            
+
             <table v-cloak style="margin-top:10px;" class="table table-condensed table-bordered table-striped table-hover">
                 <tr>
                     <th>ID</th>
@@ -124,6 +124,7 @@
                 showDlg: function (mode) {
                     layer.open({
                         type: 1,
+                        title: mode == 'add' ? '添加' : '编辑',
                         content: $('#dlg'),
                         area: ['400px', '280px'],
                         btn: ['确定', '取消'],
