--- a/Views/Admin/login.cshtml
+++ b/Views/Admin/login.cshtml
@@ -139,7 +139,7 @@
                         'code': this.loginmodel.code
                     }, res => {
                         if (res.success) {
-                            window.location.href = "../../../";
+                            window.location.href = "../../../Admin/";
                             console.log(res);
                         } else {
                             alert(res.message);
