--- a/Views/Admin/login.cshtml
+++ b/Views/Admin/login.cshtml
@@ -140,7 +140,7 @@
                     }, res => {
                         if (res.success) {
                             window.location.href = "../../../Admin/";
-                            console.log(res);
+                            //console.log(res);
                         } else {
                             alert(res.message);
                         }
