--- a/Views/Role/Index.cshtml
+++ b/Views/Role/Index.cshtml
@@ -113,7 +113,7 @@
                                 if (res.success) {
                                     layer.msg(res.message);
                                     layer.close(idx);
-                                    dlg_data = {};
+                                    vue.dlg_data = {};
                                     vue.getdata();
                                 } else {
                                     layer.msg(res.message);
