--- a/Views/Admin/login.cshtml
+++ b/Views/Admin/login.cshtml
@@ -36,7 +36,7 @@
             </div>
 
             <div class="panel-body ">
-                <div style="text-align:center;" v-show="if_reg">
+                <div style="text-align:center;display:none;" v-show="if_reg" >
                     @*<table>
                             <tr><td>用户名</td><td><input type="text" v-model="regmodel.username" /></td></tr>
                             <tr><td>密码</td><td><input type="password" v-model="regmodel.password" /></td></tr>
