--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -146,7 +146,7 @@
                 logout: function () {
                     $.post('../api/User/LogOut', {}, function (res) {
                         if (res.success) {
-                            window.location.href = '../../../';
+                            window.location.href = '../../../admin/';
                         } else {
                             alert(res.message);
                         }
