--- a/Views/Admin/login.cshtml
+++ b/Views/Admin/login.cshtml
@@ -23,7 +23,8 @@
             }
 
         body {
-            background-image: url('../../images/e88c588ec636c86e4d955373a464616d.png');
+            background-image: url('../../upload/2-1p111104136459.jpg');
+            /*background-image: url('../../images/e88c588ec636c86e4d955373a464616d.png');*/
         }
     </style>
 </head>
