--- a/Views/Room/Index.cshtml
+++ b/Views/Room/Index.cshtml
@@ -53,14 +53,18 @@
         .left {
             padding-top: 65px;
             width: 240px;
-            float: left;
-            position: absolute;
+            position: fixed;
             top: 0;
             bottom: 0;
             left: 0;
             background-color: #2d2e36;
             overflow-y: auto;
+            overflow-x: visible;
         }
+
+            .left::-webkit-scrollbar {
+                display: none;
+            }
 
         .content {
             padding-top: 65px;
@@ -312,6 +316,7 @@
             color: #666;
             margin-right: 6px;
             font-size: 12px;
+            margin-top: 2px;
         }
 
             .a_more:hover {
@@ -324,11 +329,73 @@
             border: none;
             width: 21px;
             height: 21px;
-            float:left;
+            float: left;
         }
 
         #_left_my_follow:hover .heartIcon {
             background-image: url('../../fonts/heart_orange.png');
+        }
+
+        .class_item {
+        }
+
+            .class_item:nth-child(3n+1) {
+                text-align: right;
+            }
+
+            .class_item:nth-child(3n+2) {
+                text-align: left;
+            }
+
+            .class_item:nth-child(3n+3) {
+                text-align: center;
+            }
+
+        .left_item {
+            display: block;
+            height: 30px;
+            padding-left: 10px;
+            padding-right: 10px;
+            font-weight: 400;
+            font-size: 16px;
+            margin: 0;
+        }
+
+            .left_item:hover {
+                background-color: #26272e;
+            }
+
+        .Aside-toggle {
+            position: fixed;
+            top: calc(50% + 25px);
+            overflow: visible;
+            width: 22px;
+            height: 80px;
+            -webkit-transform: translateY(-50%);
+            -moz-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            -o-transform: translateY(-50%);
+            transform: translateY(-50%);
+            background-color: #2d2e36;
+            -webkit-border-radius: 11px;
+            -moz-border-radius: 11px;
+            border-radius: 11px;
+            cursor: pointer;
+        }
+
+            .Aside-toggle:hover {
+                background-color: #3b3c48;
+            }
+
+        .Aside-toggle-Expand {
+            left: 229px;
+        }
+
+        .Aside-toggle-Shark {
+            left: -11px;
+        }
+
+        .left_expand {
         }
     </style>
 </head>
@@ -355,43 +422,60 @@
     </nav>
     <div class="left" id="left">
         @{
-            List<LiveClass> list = ViewBag.ClassList as List<LiveClass>;
-            var Roots = list.Where(t => t.ParentId == 0);
+            Dictionary<int, List<LiveClass>> dict = ViewBag.classDict as Dictionary<int, List<LiveClass>>;
+            var Roots = dict[0];
         }
 
-        <div>
-            <div style="height:30px;padding-left: 10px;padding-right:10px;">
-                <a class="liveClass mainClass" id="_left_my_follow" style="font-weight: 400;font-size:16px;margin:0;" href="/Follow">
-                    <div class="heartIcon"></div>
-                    <span style="height:21px;display:block;float:left;margin-left:8px;">我的关注</span>
-                </a>
-            </div>
+        <div class="left_expand">
+            <a class="liveClass mainClass left_item" id="_left_my_follow" href="/Follow">
+                <div class="heartIcon"></div>
+                <span style="height:21px;display:block;float:left;margin-left:8px;">我的关注</span>
+            </a>
 
             @foreach (LiveClass root in Roots)
             {
                 <div class="divClassGroup">
                     <div>
                         <a class="liveClass mainClass" href="/Class/@root.Id" data-id="@root.Id">@root.Name</a>
-                        <div class="a_more" href="/Class/@root.Id">更多</div>
+                        <a class="a_more" href="/Class/@root.Id">全部</a>
                     </div>
                     @{
-                        var subs = list.Where(t => t.ParentId == root.Id);
-                    }
-                    @foreach (var item in subs)
-                    {
-                        <a class="liveClass subClass" href="/Class/@item.Id" data-id="@item.Id">@item.Name</a>
+                        if (dict.ContainsKey(root.Id))
+                        {
+                            int i = 0;
+                            var subs = dict[root.Id];
+                            foreach (var item in subs)
+                            {
+                                <a class="liveClass subClass class_item" href="/Class/@item.Id" data-id="@item.Id">@item.Name</a>
+                                i++;
+                                if (i > 14)
+                                {
+                                    break;
+                                }
+                            }
+                        }
                     }
                 </div>
             }
+
         </div>
 
+        <div class="left_shark">
+            123
+        </div>
 
+        <div class="Aside-toggle Aside-toggle-Expand" style="text-align:center;">
+            <span style="line-height:80px;color:#a7a7a7;"><</span>
+        </div>
+        <div class="Aside-toggle Aside-toggle-Shark" style="text-align:center;display:none;">
+            <span style="line-height:80px;color:#a7a7a7;">></span>
+        </div>
     </div>
     <div id="content" class="content">
 
         <div style="height:92px;margin-bottom:10px; width:100%;border:1px solid #e5e4e4" id="title">
             <div style="float:left;">
-                <img id="ancorPic" style="width:92px;height:92px;" src="~/upload/faa711e232041d7525a1bd695bf8fa8e_middle.jpg" />
+                <img id="ancorPic" style="width:92px;height:92px;" src="~/upload/QQ图片20190402215023.jpg" />
             </div>
             <div id="divRoomInfo" style="max-width: 787px;padding-left:10px;float:left;">
                 <div id="TitleHeadLine" style="font-family: Microsoft Yahei,-apple-system,sans-serif;font-size: 12px;line-height: 1.5;padding-top:3px;">
@@ -781,6 +865,20 @@
                     ele.removeClass('yiguanzhu').addClass('guanzhu').text('关注');
                     //处理取关逻辑
                 }
+            });
+
+            $('.Aside-toggle-Expand').off('click').on('click', function (e) {
+                $('.Aside-toggle-Expand,.left_expand').hide();
+                $('.Aside-toggle-Shark,.left_shark').show();
+                $('.left').css('width', '0');
+                resize();
+            });
+
+            $('.Aside-toggle-Shark').off('click').on('click', function (e) {
+                $('.Aside-toggle-Expand,.left_expand').show();
+                $('.Aside-toggle-Shark,.left_shark').hide();
+                $('.left').css('width', '240px');
+                resize();
             });
 
             if (user != '') {
